test/arrays/bradc/scalarArrMismatch.good
scalarArrMismatch.chpl:4: error: Cannot assign to real(32) from real(64)
