test/arrays/bradc/scalarArrMismatch.chpl
var A: [1..10] real(32);
var x = 1.0;

A = x;
